--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,50 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@partisiablockchain/abi-client": "^5.163.0",
+    "@partisiablockchain/blockchain-api-transaction-client": "^5.117.0",
+    "@partisiablockchain/zk-client": "^5.190.0",
+    "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.11",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.6",
+    "@radix-ui/react-popover": "^1.1.10",
+    "@radix-ui/react-radio-group": "^1.2.4",
+    "@radix-ui/react-scroll-area": "^1.2.5",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.4",
+    "@tailwindcss/vite": "^4.1.4",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "crypto-browserify": "^3.12.1",
+    "date-fns": "^4.1.0",
+    "events": "^3.3.0",
+    "lucide-react": "^0.488.0",
+    "next-themes": "^0.4.6",
+    "partisia-blockchain-applications-rpc": "^1.0.13",
+    "partisia-blockchain-applications-sdk": "^0.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-day-picker": "8.10.1",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
+    "react-router-dom": "^7.5.0",
+    "sonner": "^2.0.3",
+    "stream-browserify": "^3.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -25,5 +64,9 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
+  },
+  "overrides": {
+    "merkletreejs": "^0.5.1",
+    "axios": "^1.8.4"
   }
 }
