--- a/api/.env.example
+++ b/api/.env.example
@@ -1,4 +1,6 @@
 PORT=4141
 MONGO_URI=mongodb://localhost:27010/trivia
+JWT_SECRET=supersecretjwtkey
 CSRF_SECRET=supersecretcsrfkey
+CORS_ORIGIN=http://localhost:5173
 SESSION_SECRET=supersecret
