--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,10 @@
     "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-scroll-area": "^1.2.5",
     "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.1.4",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.76.1",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
