--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "crypto-browserify": "^3.12.1",
     "date-fns": "^4.1.0",
     "events": "^3.3.0",
+    "js-confetti": "^0.12.0",
     "lucide-react": "^0.488.0",
     "luxon": "^3.6.1",
     "next-themes": "^0.4.6",
